--- a/index.html
+++ b/index.html
@@ -1,11 +1,249 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/base.css" />
-    <title>Résumé</title>
-  </head>
-  <body>
-    ― Hello World! &#x1F609;
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="css/base.css" />
+  <title>Résumé</title>
+</head>
+
+<body>
+  <!-- <dialog> -->
+  <!-- <header> -->
+  <!-- <main> -->
+  <main>
+    <article>
+      <div class="page" style="border-color: #892a2a;">
+        <!-- Content -->
+        <div class="stackable grid">
+          <div class="row">
+            <div class="three wide center aligned column">
+              <!-- Avatar -->
+              <div class="avatar-wrapper">
+                <img class="avatar" src="img/Ryu-circle.png" alt="avatar" />
+              </div>
+            </div>
+            <div class="thirteen wide column">
+              <div class="stackable grid">
+                <div class="sixteen wide column">
+                  <!-- Name, job, contacts -->
+                  <h1 class="name">Ryu Hoshi</h1>
+                  <ul class="contacts">
+                    <li>
+                      <a href="https://www.facebook.com/profile.php?id=100004808958030" rel="author" class="facebook">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                          <path
+                            d="M448 56.7v398.5c0 13.7-11.1 24.7-24.7 24.7H309.1V306.5h58.2l8.7-67.6h-67v-43.2c0-19.6 5.4-32.9 33.5-32.9h35.8v-60.5c-6.2-.8-27.4-2.7-52.2-2.7-51.6 0-87 31.5-87 89.4v49.9h-58.4v67.6h58.4V480H24.7C11.1 480 0 468.9 0 455.3V56.7C0 43.1 11.1 32 24.7 32h398.5c13.7 0 24.8 11.1 24.8 24.7z" />
+                        </svg>
+                        <span>Ryu Hoshi</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="mailto:ryuwins@gmail.com" rel="author" class="mail">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                          <path
+                            d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z">
+                          </path>
+                        </svg>
+                        <span>ryuwins@gmail.com</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://alexeyzhuravlov13.github.io/homepage" rel="author" class="website">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                          <path fill="currentColor"
+                            d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z">
+                          </path>
+                        </svg>
+                        <span>Ruy website</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://twitter.com/denjinryu" rel="author" class="telegram">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                          <path fill="currentColor"
+                            d="M446.7 98.6l-67.6 318.8c-5.1 22.5-18.4 28.1-37.3 17.5l-103-75.9-49.7 47.8c-5.5 5.5-10.1 10.1-20.7 10.1l7.4-104.9 190.9-172.5c8.3-7.4-1.8-11.5-12.9-4.1L117.8 284 16.2 252.2c-22.1-6.9-22.5-22.1 4.6-32.7L418.2 66.4c18.4-6.9 34.5 4.1 28.5 32.2z">
+                          </path>
+                        </svg>
+                        <span>Twitter</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.instagram.com/sworn_ryu/" rel="author" class="website">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+                          <path fill="currentColor"
+                            d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z">
+                          </path>
+                        </svg>
+                        <span>Instagram</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="sixteen wide mobile only column">
+                  <div class="divider"></div>
+                </div>
+                <div class="sixteen wide column">
+                  <!-- Intro -->
+                  <h2>Résumé</h2>
+                  <p>&mdash; I do not compete with others, the only competition that challenges me is
+                    myself. As a fighter, friend and an employee I am known as contemplative,
+                    tortured and driven.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="sixteen wide column">
+              <div class="fat divider"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="ten wide column">
+              <!-- Experience -->
+              <section>
+                <h3>Experience</h3>
+                <ul class="timeline">
+                  <li>
+                    <p>2018</p>
+                    <p><i>Amongst many fighters of the past was featured in the movie "Ready Player
+                        One". Ryu ready always!
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2017</p>
+                    <p><i>United with unknown until then to me Power Rangers to defea resurrected
+                        M.Bison.Damn good fighters they are, even not knowing karate ways!
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2016</p>
+                    <p><i>In "Street Fighter V" once and for all erased M.Bison from earth and tamed
+                        my
+                        inner Evil Ryu. Also spent some time on a side-project, mini-series
+                        "Street
+                        Fighter: Resurrection".
+                      </i>
+                    </p>
+                  </li>
+                  <li>
+                    <p>2014</p>
+                    <p><i>Filmed in a martial arts tutorial "Street Fighter: Assassin's Fist",
+                        revealing
+                        to audience forgotten art of Ansatsuken.
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2012</p>
+                    <p><i>The gods of intenet concluded me in the animated movie "Wreck-It Ralph",
+                        but
+                        rewarded me with a good drink for it!
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2008</p>
+                    <p><i>My evil alter ego sneaked out of control and became a boss in "Street
+                        Fighter
+                        IV".
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2006</p>
+                    <p><i>Borrowed my famous ripped gi to Soki in "Onimusha: Dawn of Dreams", gods
+                        informed me he needed that for the battle.
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1998</p>
+                    <p><i>Defeated M. Bison in "Street Fighter Alpha 2", bastard wanted to use my
+                        heroic
+                        body for his evil intentions, but retreated with shame. Also this year I
+                        encountered Marvel universe in "Marvel vs. Capcom: Clash of Super
+                        Heroes"
+                        fighter,loyal to my employer, Capcom, of course.
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1997</p>
+                    <p><i>Reunited with Ken, my friend and opponent in "Street Fighter III". Men's
+                        friendship works mysteriously. Also helped with Arika project "Street
+                        Fighter
+                        EX"
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1996</p>
+                    <p><i>Took care of villainous Akuma in "Street Fighter Alpha 2". As a freelance
+                        on
+                        "Super Puzzle Fighter II Turbo" tried myself in a new genre, puzzle
+                        games.
+                        Let
+                        the wrath of seven heavens come upon these malicious enigmas, never
+                        again!
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1995</p>
+                    <p><i>Kept fighting in "Street Fighter Alpha: Warriors' Dreams".
+
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1994</p>
+                    <p><i>Screened in a movie "Street Fighter", so that the batllesof past would not
+                        be
+                        forgotten by millenial generation.
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1991</p>
+                    <p><i>Was promoted to "Street Fighter II". Didn't stay there for long,
+                        celebrations
+                        and office dwelling is not for me!
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>1987</p>
+                    <p><i>Started working for Capcom project "Street Fighter". My partner was Ken
+                        Masters,
+                        the boss'name was Sagat.
+                      </i></p>
+                  </li>
+                </ul>
+                <h3>PUBLICATIONS</h3>
+                <ul class="timeline">
+                  <li>
+                    <p>2011</p>
+                    <p><i>The true and humble story of me under pseudonim Tyler Wilde in an article
+                        "The evolution of Ken and Ryu".
+                      </i></p>
+                  </li>
+                  <li>
+                    <p>2003-2018</p>
+                    <p><i>For 15 years I have published comic books with Udon Entertainment
+                        depicting my adventures, bitter lessons and great victories.
+                      </i></p>
+                  </li>
+                </ul>
+              </section>
+            </div>
+            <div class="six wide column">
+              <!-- Languages -->
+              <!-- Skills -->
+              <!-- Character -->
+              <!-- Likes -->
+              <!-- Dislikes -->
+              <!-- Wants -->
+              <!-- Education -->
+              <!-- Articles -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+  </main>
+  <!-- <footer> -->
+  <!-- <script> -->
+</body>
+
 </html>
