added secondary information

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
   <!-- <dialog> -->
   <!-- <header> -->
+  <header>
+    <div class="credits">
+      Inspired by <a href="https://volodymyrkushnir.com/" rel="external"><strong>volodymyrkushnir</strong></a>
+    </div>
+  </header>
   <!-- <main> -->
   <main>
     <article>
@@ -229,13 +234,87 @@
             </div>
             <div class="six wide column">
               <!-- Languages -->
+              <section>
+                <h3>Languages</h3>
+                <p class="tags small">
+                  <small>EN</small> <span>ENGLISH</span>
+                  <small>CN</small> <span>MANDARIN</span>
+                  <small>JP</small> <span>JAPANESE</span>
+                </p>
+              </section>
               <!-- Skills -->
+              <section>
+                <h3>Skills</h3>
+                <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES
+                  DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS</p>
+              </section>
+
               <!-- Character -->
+              <section>
+                <h3>Character</h3>
+                <p class="tags small">NOBLE DIRECT BOLD CONFIDENT DARING SCHIZOPHRENIC DRAMATIC
+                  PERSUASIVE IMMEDIATE WISE</p>
+              </section>
+              <section>
+                <h3>Life lesson</h3>
+                <p class="tags small">You must defeat Sheng Long to stand a chance.</p>
+              </section>
               <!-- Likes -->
+              <section>
+                <h3>Likes&#x1f603;</h3>
+                <p class="tags small">GI VEGETABLES BLOOD SMALL MARSHMELLOWS RED COLOR KILLED ENEMY</p>
+              </section>
               <!-- Dislikes -->
+              <section>
+                <h3>Dislikes&#x1f61e;</h3>
+                <p class="tags small">BISONS GHOSTS SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES
+                </p>
+              </section>
               <!-- Wants -->
+              <section>
+                <h3>Wants&#x1f97a;</h3>
+                <p class="tags small bulleted">BE FIT WRITE MORE BOOKS FIND A GIRLFRIEND TO GO TO CINEMA
+                  WITH KILL ALL OF AKUMA FAMILY</p>
+              </section>
               <!-- Education -->
+              <section>
+                <h3>LIFE & EDUCATION</h3>
+                <p class="tags small">To live is to fight and to fight is to live. I started learning
+                  fighting at my master Gouken's castle, I was beaten at head way too often to
+                  remember when exactly.
+                </p>
+              </section>
               <!-- Articles -->
+              <section>
+                <h3>ACHIEVEMENTS</h3>
+                <ul>
+                  <li>
+                    <p class="tags small">#1 in "Top 25 Street Fighter Characters" by IGN, who also called me "fancy",
+                      "icon"
+                      and "a testament to the virtue of simplicity" ❤️</p>
+                  </li>
+                  <li>
+                    <p class="tags small">#2 in "Top 20 Street Fighter Characters of All Time" by GameDaily, same
+                      council
+                      found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I
+                      proudly share with my partner Ken</p>
+                  </li>
+                  <li>
+                    <p class="tags small">I was named "5th Most Powerful Street Fighter Character" by Screen Rant-san
+                    </p>
+                  </li>
+                  <li>
+                    <p class="tags small">#71 in "Top 100 Heroes of All Time" by UGO Networks, also recognized #2 in
+                      their
+                      list of "Top 50 Street Fighter Characters"</p>
+                  </li>
+                  <li>
+                    <p class="tags small">In a survey of 4000 online matches for Super Street Fighter IV, I got to be
+                      the most
+                      popular character, with 16.6% of players choosing my side</p>
+                  </li>
+                </ul>
+              </section>
             </div>
           </div>
         </div>
